tests/fail/DivisionFail.java
package fail;

import java.lang.System;

public class DivisionFail {
    public static void main(String[] args) {
        System.out.println('a' / 42);
    }
}